--- a/discovery.html
+++ b/discovery.html
@@ -5,7 +5,7 @@
     <title>Discovery Page</title>
     <link rel="stylesheet" href="assets/musicjournal.css">
     <link rel="stylesheet" href="assets/discovery.css">
-</head
+</head>
 <body>
 
     <div class="layout">
@@ -47,4 +47,5 @@
     </div>
 
 </body>
+
 </html>
